--- a/AMR.ipynb
+++ b/AMR.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyO1fYadqueW0M/Ls+qNwRVV"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
